Minor modification in data cleaning: recoded vehicle catagories

--- a/notebooks/1_Data_Cleaning.ipynb
+++ b/notebooks/1_Data_Cleaning.ipynb
@@ -421,7 +421,7 @@
     "# Investigate categorical options\n",
     "for col in cat_cols:\n",
     "    print(f\"\\n----- {col} -----\")\n",
-    "    print(df[col].value_counts(dropna=False).head(15))"
+    "    print(df[col].value_counts(dropna=False).head(30))"
    ]
   },
   {
@@ -536,25 +536,40 @@
     "# -----------------------------\n",
     "vehicle_unknown = {\"E Unknown Type of Motorized Vehicle\", \"CU is Unknown\", \"Unknown\"}\n",
     "\n",
-    "vehicle_ok = {\n",
-    "    \"Passenger Car\",\n",
-    "    \"E Sport Utility Vehicle (SUV)\",\n",
-    "    \"Pick-Up (Four-Tire Light Truck)\",\n",
-    "    \"E Mini-van\",\n",
-    "    \"E Tractor/Semi-Trailer\",\n",
+    "vehicles = {\"Passenger Car\", \"Motorcycle\"}\n",
+    "\n",
+    "pickup = {\"Pick-Up (Four-Tire Light Truck)\"}\n",
+    "\n",
+    "suv = {\"E Sport Utility Vehicle (SUV)\", \"E 4-Wheel Off Road ATV\"}\n",
+    "\n",
+    "trucks = {\n",
     "    \"E Single-Unit Truck (2-Axle/6-Tire)\",\n",
-    "    \"E Cargo Van (10000 lbs or Less)\",\n",
-    "    \"Motorcycle\",\n",
+    "    \"E Tractor/Semi-Trailer\",\n",
+    "    \"E Single-Unit Truck (3 Axles or Less)\",\n",
+    "    \"E Truck (6 or 7) with Trailer\",\n",
+    "    \"E Other Heavy Truck (Cannot Classify)\",\n",
+    "    \"E Truck Tractor Only (Bobtail)\",\n",
+    "    \"E Tractor/Doubles\",\n",
+    "    \"E Low Speed Vehicle\",\n",
+    "    \"E Other Light Truck (10000 lbs or Less)\",\n",
     "}\n",
+    "\n",
+    "vans = {\"E Mini-van\", \"E Cargo Van (10000 lbs or Less)\", \"E Passenger Van\", \"E Van or Mini-Van\"}\n",
     "\n",
     "\n",
     "def recode_vehicle_type(x):\n",
     "    if x in vehicle_unknown:\n",
     "        return np.nan\n",
-    "    elif x in vehicle_ok:\n",
+    "    elif x in vehicles:\n",
     "        return x\n",
+    "    elif x in pickup:\n",
+    "        return \"Pickup\"\n",
+    "    elif x in vans:\n",
+    "        return \"Van\"\n",
+    "    elif x in trucks:\n",
+    "        return \"Truck\"\n",
     "    else:\n",
-    "        return \"Others\"\n",
+    "        return \"Other\"\n",
     "\n",
     "\n",
     "df[\"Vehicle Type Recode\"] = df[\"Vehicle Type\"].apply(recode_vehicle_type)\n",
@@ -732,6 +747,14 @@
     "# Save cleaned analysis dataset\n",
     "cleaned_df.to_pickle(\"../data/cleaned/crash_2018_cleaned.pkl\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
