Working with bivariate_eda

--- a/notebooks/3_Bivariate_EDA.ipynb
+++ b/notebooks/3_Bivariate_EDA.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "sns.set(style=\"whitegrid\")\n",
     "\n",
-    "cleaned_df = pd.read_pickle(\"./data/cleaned/crash_2018_cleaned.pkl\")\n",
+    "cleaned_df = pd.read_pickle(\"../data/cleaned/crash_2018_cleaned.pkl\")\n",
     "\n",
     "cleaned_df[\"Crash Severity\"].value_counts().sort_index()"
    ]
