3rd draft of bivariate EDA

--- a/notebooks/3_Bivariate_EDA.ipynb
+++ b/notebooks/3_Bivariate_EDA.ipynb
@@ -43,118 +43,489 @@
    "id": "3",
    "metadata": {},
    "source": [
-    "## 4.2. Crash severity vs categorical factors\n",
-    "\n",
-    "We start with simple bivariate looks at how crash severity differs among different outcomes of categorical variables.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Variable names to show on plots\n",
-    "nice_names = {\n",
-    "    \"Functional Class Recode\": \"Functional Class\",\n",
-    "    \"Crash Manner Recode\": \"Crash Manner\",\n",
-    "    \"Lighting Conditions Recode\": \"Lighting Conditions\",\n",
-    "    \"Visibility Obstruction Recode\": \"Visibility Obstruction\",\n",
-    "    \"Vehicle Type Recode\": \"Vehicle Type\",\n",
-    "    \"Driver Gender Recode\": \"Driver Gender\",\n",
-    "    \"Driver License Validity\": \"Driver License Validity\",\n",
-    "    \"Raised Median\": \"Raised Median\",\n",
-    "}\n",
-    "\n",
-    "from matplotlib.colors import ListedColormap\n",
-    "\n",
-    "severity_colors = ListedColormap(\n",
-    "    [\n",
-    "        \"#2ca02c\",  # PDO - green\n",
-    "        \"#bcbd22\",  # Minor - yellow-green\n",
-    "        \"#ff7f0e\",  # Serious - orange\n",
-    "        \"#d62728\",  # Fatal - red\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "\n",
-    "def plot_severity_grid(\n",
-    "    df,\n",
-    "    factors,\n",
-    "    severity_col=\"Crash Severity\",\n",
-    "    order_sev=(\"PDO\", \"Minor\", \"Serious\", \"Fatal\"),\n",
-    "    ncols=2,\n",
-    "    figsize=(12, 8),\n",
-    "    cmap=severity_colors,\n",
-    "):\n",
-    "    import math\n",
-    "\n",
-    "    n = len(factors)\n",
-    "    nrows = math.ceil(n / ncols)\n",
-    "    fig, axes = plt.subplots(nrows, ncols, figsize=figsize)\n",
-    "    axes = axes.flatten()\n",
-    "\n",
-    "    for i, factor in enumerate(factors):\n",
-    "        ax = axes[i]\n",
-    "        ct = pd.crosstab(df[severity_col], df[factor], normalize=\"columns\") * 100\n",
-    "        ct = ct.reindex(index=order_sev)\n",
-    "\n",
-    "        # Rename columns in the table for plotting (x‑axis labels)\n",
-    "        ct = ct.rename(columns=nice_names).T\n",
-    "\n",
-    "        ct.plot(kind=\"bar\", stacked=True, cmap=cmap, ax=ax, legend=False)\n",
-    "        ax.set_title(nice_names.get(factor, factor), fontsize=9)\n",
-    "        ax.set_ylabel(\"Percent\")\n",
-    "        ax.set_xlabel(\"\")\n",
-    "        ax.tick_params(axis=\"x\", labelrotation=30, labelsize=7)\n",
-    "\n",
-    "        for patch in ax.patches:\n",
-    "            h = patch.get_height()\n",
-    "            if h < 7:\n",
-    "                continue\n",
-    "            x = patch.get_x() + patch.get_width() / 2\n",
-    "            y = patch.get_y() + h / 2\n",
-    "            ax.text(x, y, f\"{h:.0f}%\", ha=\"center\", va=\"center\", fontsize=7, color=\"black\")\n",
-    "\n",
-    "    for j in range(i + 1, len(axes)):\n",
-    "        fig.delaxes(axes[j])\n",
-    "\n",
-    "    handles, labels = axes[0].get_legend_handles_labels()\n",
-    "    fig.legend(handles, labels, title=severity_col, bbox_to_anchor=(1.02, 0.5), loc=\"center left\")\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "print(\"Distribution of crash severity (%) among categories\\n\")\n",
-    "plot_severity_grid(\n",
-    "    cleaned_df,\n",
-    "    [\"Area Type\", \"Functional Class Recode\", \"Lighting Conditions Recode\", \"Crash Manner Recode\"],\n",
-    ")\n",
-    "\n",
-    "plot_severity_grid(\n",
-    "    cleaned_df, [\"Visibility Obstruction Recode\", \"Raised Median\", \"Curvature\", \"Grade\"]\n",
-    ")\n",
-    "\n",
-    "plot_severity_grid(cleaned_df, [\"Driver Gender Recode\", \"Driver License Validity\"])\n",
-    "\n",
-    "plot_severity_grid(cleaned_df, [\"Vehicle Type Recode\"])"
+    "# 4.2. Crash Severity across Spatial and Time Factors"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "4",
    "metadata": {},
    "source": [
-    "## Observations\n",
-    "\n",
-    "...As we can see, "
+    "## 4.2.1 Weekend, time of day, and area type"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spatial_time_vars = [\"Weekend\", \"Time of Day\", \"Area Type\"]\n",
+    "\n",
+    "for var in spatial_time_vars:\n",
+    "    print(f\"\\nCrash severity (%) by {var}\\n\")\n",
+    "    ct = pd.crosstab(cleaned_df[\"Crash Severity\"], cleaned_df[var], normalize=\"columns\") * 100\n",
+    "    display(ct.round(1))\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(7, 4))\n",
+    "    ct.T.plot(kind=\"bar\", stacked=True, ax=ax)\n",
+    "    ax.set_title(f\"Crash severity by {var}\")\n",
+    "    ax.set_xlabel(var)\n",
+    "    ax.set_ylabel(\"Crash share by severity (%)\")\n",
+    "    ax.legend(title=\"Crash severity\", bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6",
+   "metadata": {},
+   "source": [
+    "### Observations\n",
+    "- The percentage of severe crashes is slightly higher on weekends, while PDO crashes have a higher percentage on weekdays.\n",
+    "- Nighttime crashes are much more likely to be severe than daytime crashes.\n",
+    "- Rural areas experience considerably higher injury and fatal crashes, while urban areas experience a higher share of PDO crashes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7",
+   "metadata": {},
+   "source": [
+    "## 4.2.2 Countywise distribution\n",
+    "Lets have a look on the counties experiencing maximum number of crashes and their severity distribution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Total crashes per county\n",
+    "county_totals = cleaned_df.groupby(\"County\", observed=False)[\"Area Type\"].count()\n",
+    "\n",
+    "top10_counties = county_totals.sort_values(ascending=False).head(10).index\n",
+    "\n",
+    "# Pivot table of crash counts by severity for those counties\n",
+    "pivot_all = cleaned_df.pivot_table(\n",
+    "    index=\"County\",\n",
+    "    columns=\"Crash Severity\",\n",
+    "    values=\"Area Type\",\n",
+    "    aggfunc=\"count\",\n",
+    "    fill_value=0,\n",
+    "    observed=False,\n",
+    ")\n",
+    "\n",
+    "top10_pivot = pivot_all.loc[top10_counties]\n",
+    "\n",
+    "# Add total column and sort by it (optional but handy)\n",
+    "top10_pivot[\"Total\"] = top10_pivot.sum(axis=1)\n",
+    "top10_pivot = top10_pivot.sort_values(\"Total\", ascending=False)\n",
+    "print(\"Crash counts in top 10 counties and their severity\\n\")\n",
+    "top10_pivot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9",
+   "metadata": {},
+   "source": [
+    "We may also look at the safer roads with counties experiencing minimal crash counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "safe10_counties = county_totals.sort_values(ascending=True).head(10).index\n",
+    "\n",
+    "# Pivot table of crash counts by severity for those counties\n",
+    "pivot_all = cleaned_df.pivot_table(\n",
+    "    index=\"County\",\n",
+    "    columns=\"Crash Severity\",\n",
+    "    values=\"Area Type\",\n",
+    "    aggfunc=\"count\",\n",
+    "    fill_value=0,\n",
+    "    observed=False,\n",
+    ")\n",
+    "\n",
+    "safe10_pivot = pivot_all.loc[safe10_counties]\n",
+    "\n",
+    "# Add total column and sort by it (optional but handy)\n",
+    "safe10_pivot[\"Total\"] = safe10_pivot.sum(axis=1)\n",
+    "safe10_pivot = safe10_pivot.sort_values(\"Total\", ascending=True)\n",
+    "print(\"Crash counts in top 10 safe counties and their severity\\n\")\n",
+    "safe10_pivot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11",
+   "metadata": {},
+   "source": [
+    "Lets look at the counties experiencing higher percentage of severe crashes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# county x severity table in row-wise percentages\n",
+    "county_sev = (\n",
+    "    cleaned_df.pivot_table(\n",
+    "        index=\"County\",\n",
+    "        columns=\"Crash Severity\",\n",
+    "        values=\"Area Type\",  # or any column\n",
+    "        aggfunc=\"count\",\n",
+    "        fill_value=0,\n",
+    "        observed=False,\n",
+    "    )  # <‑ add this\n",
+    ")\n",
+    "# convert to % of that county's crashes\n",
+    "county_sev_pct = county_sev.div(county_sev.sum(axis=1), axis=0) * 100\n",
+    "county_sev_pct.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Top 10 ciunties by % of crash severity\")\n",
+    "severity_colors = {\n",
+    "    \"Fatal\": \"red\",\n",
+    "    \"Serious\": \"orange\",\n",
+    "    \"Minor\": \"mediumspringgreen\",  # mint-ish green\n",
+    "    \"PDO\": \"green\",\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def plot_county_severity_pct(county_sev_pct, severity, ax=None, top_n=10):\n",
+    "    if ax is None:\n",
+    "        ax = plt.gca()\n",
+    "\n",
+    "    s = county_sev_pct[severity].sort_values(ascending=False).head(top_n)\n",
+    "    s = s.iloc[::-1]  # largest at top\n",
+    "\n",
+    "    s.plot(kind=\"barh\", ax=ax, color=severity_colors.get(severity, \"steelblue\"))\n",
+    "\n",
+    "    ax.set_title(f\"Top {top_n} counties: {severity} (% of county crashes)\")\n",
+    "    ax.set_xlabel(\"Percent of crashes\")\n",
+    "    ax.set_ylabel(\"County\")\n",
+    "    ax.tick_params(axis=\"y\", labelsize=8)\n",
+    "\n",
+    "\n",
+    "fig, axes = plt.subplots(1, 4, figsize=(20, 5), sharey=False)\n",
+    "severities = [\"Fatal\", \"Serious\", \"Minor\", \"PDO\"]\n",
+    "\n",
+    "for ax, sev in zip(axes, severities):\n",
+    "    plot_county_severity_pct(county_sev_pct, sev, ax=ax, top_n=10)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14",
+   "metadata": {},
+   "source": [
+    "### Observations\n",
+    "\n",
+    "- Perry County’s roads can be considered among the safest, with only 98 crashes in the year and most of them (70) being PDO. In contrast, Jefferson County’s roads experienced the highest number of crashes (more than 34,000), with 84 fatal incidents, making it the most vulnerable.\n",
+    "- None of the top three counties by fatal-crash proportion (Greene, Clay, Lowndes) appear among the top ten counties by total crash count. This indicates that some areas have fewer crashes overall, but a larger share of those crashes are severe.\n",
+    "- Clay County is the 6th lowest county in the list when ranked by total crash count, with only 233 crashes, but 6 of them are fatal. This gives Clay County the second-highest percentage of fatal crashes relative to its total crashes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15",
+   "metadata": {},
+   "source": [
+    "# 4.3. Crash Severity across Roadway and Traffic Conditions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16",
+   "metadata": {},
+   "source": [
+    "### 4.3.1 Categorical roadway factors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "road_cat_vars = [\"Functional Class Recode\", \"Curvature\", \"Grade\", \"Raised Median\"]\n",
+    "\n",
+    "for var in road_cat_vars:\n",
+    "    print(f\"\\nCrash severity (%) by {var}\\n\")\n",
+    "    ct = pd.crosstab(cleaned_df[\"Crash Severity\"], cleaned_df[var], normalize=\"columns\") * 100\n",
+    "    display(ct.round(1))\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(7, 4))\n",
+    "    ct.T.plot(kind=\"bar\", stacked=True, ax=ax)\n",
+    "    ax.set_title(f\"Crash severity by {var}\")\n",
+    "    ax.set_xlabel(var)\n",
+    "    ax.set_ylabel(\"Crash share by severity (%)\")\n",
+    "    ax.legend(title=\"Crash severity\", bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 4.3.2 Numerical roadway factors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "road_num_vars = [\n",
+    "    \"AADT\",\n",
+    "    \"Number of Lanes Num\",\n",
+    "    \"Number of Vehicles Num\",\n",
+    "    \"Speed Limit Num\",\n",
+    "    \"Impact Speed Num\",\n",
+    "]\n",
+    "\n",
+    "summary_road_num = cleaned_df.groupby(\"Crash Severity\", observed=False)[road_num_vars].agg(\n",
+    "    [\"mean\", \"median\", \"std\"]\n",
+    ")\n",
+    "summary_road_num"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Boxplots by severity, 2 at a time for readability\n",
+    "\n",
+    "num_pairs = [\n",
+    "    (\"AADT\", \"Number of Lanes Num\"),\n",
+    "    (\"Number of Vehicles Num\", \"Speed Limit Num\"),\n",
+    "    (\"Impact Speed Num\", None),\n",
+    "]\n",
+    "\n",
+    "for v1, v2 in num_pairs:\n",
+    "    fig, axes = plt.subplots(1, 2 if v2 is not None else 1, figsize=(12, 4))\n",
+    "    if v2 is None:\n",
+    "        axes = [axes]\n",
+    "\n",
+    "    cleaned_df.boxplot(column=v1, by=\"Crash Severity\", ax=axes[0])\n",
+    "    axes[0].set_title(f\"{v1} by crash severity\")\n",
+    "    axes[0].set_xlabel(\"Crash severity\")\n",
+    "    axes[0].set_ylabel(v1)\n",
+    "\n",
+    "    if v2 is not None:\n",
+    "        cleaned_df.boxplot(column=v2, by=\"Crash Severity\", ax=axes[1])\n",
+    "        axes[1].set_title(f\"{v2} by crash severity\")\n",
+    "        axes[1].set_xlabel(\"Crash severity\")\n",
+    "        axes[1].set_ylabel(v2)\n",
+    "\n",
+    "    plt.suptitle(\"\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21",
+   "metadata": {},
+   "source": [
+    "### Observations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22",
+   "metadata": {},
+   "source": [
+    "# 4.4. Crash Severity across Driver and Vehicle Factors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23",
+   "metadata": {},
+   "source": [
+    "## 4.4.1 Categorical driver/vehicle variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver_cat_vars = [\n",
+    "    \"Vehicle Type Recode\",\n",
+    "    \"Driver Gender Recode\",\n",
+    "    \"Driver License Validity\",\n",
+    "    \"Crash Manner Recode\",\n",
+    "    \"BAC Available\",\n",
+    "]\n",
+    "\n",
+    "for var in driver_cat_vars:\n",
+    "    print(f\"\\nCrash severity (%) by {var}\\n\")\n",
+    "    ct = pd.crosstab(cleaned_df[\"Crash Severity\"], cleaned_df[var], normalize=\"columns\") * 100\n",
+    "    display(ct.round(1))\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(8, 4))\n",
+    "    ct.T.plot(kind=\"bar\", stacked=True, ax=ax)\n",
+    "    ax.set_title(f\"Crash severity by {var}\")\n",
+    "    ax.set_xlabel(var)\n",
+    "    ax.set_ylabel(\"Crash share by severity (%)\")\n",
+    "    ax.legend(title=\"Crash severity\", bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25",
+   "metadata": {},
+   "source": [
+    "## 4.4.2 Numeric driver variables (main dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver_num_main = [\"Driver Age\"]\n",
+    "\n",
+    "summary_driver_main = cleaned_df.groupby(\"Crash Severity\")[driver_num_main].agg(\n",
+    "    [\"mean\", \"median\", \"std\"]\n",
+    ")\n",
+    "summary_driver_main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(7, 4))\n",
+    "cleaned_df.boxplot(column=\"Driver Age\", by=\"Crash Severity\", ax=ax)\n",
+    "ax.set_title(\"Driver age by crash severity\")\n",
+    "ax.set_xlabel(\"Crash severity\")\n",
+    "ax.set_ylabel(\"Driver age\")\n",
+    "plt.suptitle(\"\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28",
+   "metadata": {},
+   "source": [
+    "## 4.4.3 DUI subset: severity vs BAC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming duidf already saved or can be recreated similarly\n",
+    "# If stored separately:\n",
+    "\n",
+    "full_df = pd.read_pickle(\"../data/cleaned/crash_2018_full.pkl\")\n",
+    "dui_df = full_df[full_df[\"BAC Available\"]].copy()\n",
+    "\n",
+    "print(\"Crash severity (%) by BAC category (DUI subset only)\\n\")\n",
+    "\n",
+    "ct_bac = pd.crosstab(dui_df[\"Crash Severity\"], dui_df[\"Driver BAC\"], normalize=\"columns\") * 100\n",
+    "\n",
+    "display(ct_bac.round(1))\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(8, 4))\n",
+    "ct_bac.T.plot(kind=\"bar\", stacked=True, ax=ax)\n",
+    "ax.set_title(\"Crash severity by BAC (DUI subset)\")\n",
+    "ax.set_xlabel(\"BAC category\")\n",
+    "ax.set_ylabel(\"Crash share by severity (%)\")\n",
+    "ax.legend(title=\"Crash severity\", bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30",
+   "metadata": {},
+   "source": [
+    "# 4.5. Crash Severity across Environmental Conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env_cat_vars = [\n",
+    "    \"Visibility Obstruction Recode\",\n",
+    "    \"Lighting Conditions Recode\",\n",
+    "]\n",
+    "\n",
+    "for var in env_cat_vars:\n",
+    "    print(f\"\\nCrash severity (%) by {var}\\n\")\n",
+    "    ct = pd.crosstab(cleaned_df[\"Crash Severity\"], cleaned_df[var], normalize=\"columns\") * 100\n",
+    "    display(ct.round(1))\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(8, 4))\n",
+    "    ct.T.plot(kind=\"bar\", stacked=True, ax=ax)\n",
+    "    ax.set_title(f\"Crash severity by {var}\")\n",
+    "    ax.set_xlabel(var)\n",
+    "    ax.set_ylabel(\"Crash share by severity (%)\")\n",
+    "    ax.legend(title=\"Crash severity\", bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": []
