--- a/notebooks/2_Univariate_EDA.ipynb
+++ b/notebooks/2_Univariate_EDA.ipynb
@@ -73,7 +73,7 @@
    "source": [
     "# 2.2 Identification and Grouping of the Variable Types\n",
     "\n",
-    "The varibales that are of interest are grouped into continuous and categorical types for the analysis\n"
+    "The variables that are of interest are grouped into continuous and categorical types for the analysis\n"
    ]
   },
   {
@@ -93,12 +93,13 @@
    "source": [
     "# Continuous variables\n",
     "continuous_vars = [\n",
-    "    \"Number Killed\",\n",
-    "    \"Number Serious Injuries\",\n",
-    "    \"Number Non-fatal Injuries\",\n",
-    "    \"Total Injuries\",\n",
+    "    \"AADT\",\n",
+    "    \"Number of Lanes Num\",\n",
+    "    \"Number of Vehicles Num\",\n",
+    "    \"Speed Limit Num\",\n",
     "    \"Impact Speed Num\",\n",
     "    \"Driver Age\",\n",
+    "    \"Driver BAC\",\n",
     "]\n",
     "\n",
     "\n",
@@ -118,7 +119,17 @@
    "id": "9",
    "metadata": {},
    "source": [
-    "**Observations** "
+    "**Observations** \n",
+    "\n",
+    "1. The Annual Average Daily Traffic(AADT) is concentrated on the left, right skewed indicating most of daily traffic on the roadways are within the range of 5,000 to 60,000 which is typical for roadway data\n",
+    "\n",
+    "2. Most of crashes in Alabama in 2018 occured on roadways with 2 or 4 lanes\n",
+    "\n",
+    "3. The impact speed is right skewed indicating most of the crashes occured with impact speed ranging from 5mph to 45mph\n",
+    "\n",
+    "4. The distribution for driver age shows that most crashes occured among young adults(20-50 years)\n",
+    "\n",
+    "5. Driver Blood Alcohol Concentration(BAC) tested after crash was most concentrated between 0.1% and 0.2%. Most divers were someway intoxicated. The typical legal limit is 0.08%  "
    ]
   },
   {
@@ -130,7 +141,7 @@
    "source": [
     "# Summary statistics\n",
     "print(\"Continuous Variables Summary Statistics:\")\n",
-    "cleaned_df[continuous_vars].describe()"
+    "cleaned_df[continuous_vars].describe().round(2)"
    ]
   },
   {
@@ -138,7 +149,7 @@
    "id": "11",
    "metadata": {},
    "source": [
-    "**Determining quartiles and outliers**"
+    "**Determining Quartiles and Outliers**"
    ]
   },
   {
@@ -211,7 +222,6 @@
     "    \"Vehicle Type Recode\",\n",
     "    \"Driver Gender Recode\",\n",
     "    \"Driver License Validity\",\n",
-    "    \"Driver BAC\",\n",
     "    \"BAC Available\",\n",
     "    \"Crash Manner Recode\",\n",
     "    \"Visibility Obstruction Recode\",\n",
@@ -221,11 +231,14 @@
     "\n",
     "# Categorical variables distribution\n",
     "for col in categorical_vars:\n",
-    "    plt.figure(figsize=(8, 5))\n",
+    "    plt.figure(\n",
+    "        figsize=(10, 4),\n",
+    "    )\n",
     "    cleaned_df[col].value_counts().plot(kind=\"bar\")\n",
-    "    plt.title(f\"{col} Frequency\")\n",
+    "    plt.title(f\"{col} Counts\")\n",
     "    plt.xlabel(col)\n",
-    "    plt.ylabel(\"Frequency\")\n",
+    "    plt.ylabel(\"Counts (log scale)\")\n",
+    "    plt.yscale(\"log\")\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
@@ -234,12 +247,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "16",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Observations**\n",
+    "\n",
+    "1. Most crashes in 2018 resulted in Property Damage Only(PDO), 126,719 counts and 878 counts for fatal\n",
+    "\n",
+    "2. Majority of crashes occured on weekdays\n",
+    "\n",
+    "3. Rearend and sideswipe/angle accounted for most crashes  "
+   ]
   }
  ],
  "metadata": {
