--- a/notebooks/2_Univariate_EDA.ipynb
+++ b/notebooks/2_Univariate_EDA.ipynb
@@ -1,16 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "1",
+   "id": "0",
    "metadata": {},
    "source": [
     "# Univarite EDA: Basic Analysis of Each Variable\n",
@@ -20,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2",
+   "id": "1",
    "metadata": {},
    "source": [
     "# 2.1 Setup and Data Loading"
@@ -29,15 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "4",
    "metadata": {},
    "source": [
     "# 2.2 Identification and Grouping of the Variable Types\n",
@@ -78,16 +62,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "5",
    "metadata": {},
    "source": [
-    "## Continuous Variables"
+    "## 2.2.1 Continuous Variables"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "7",
    "metadata": {},
    "source": [
     "**Observations** \n",
@@ -135,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "9",
    "metadata": {},
    "source": [
     "**Determining Quartiles and Outliers**"
@@ -155,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "11",
    "metadata": {},
    "source": [
     "**Interpretations**"
@@ -198,16 +182,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "12",
    "metadata": {},
    "source": [
-    "## Categorical Variables"
+    "## 2.2.2 Categorical Variables"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "14",
    "metadata": {},
    "source": [
     "**Observations**\n",
@@ -257,7 +241,7 @@
     "\n",
     "2. Majority of crashes occured on weekdays\n",
     "\n",
-    "3. Rearend and sideswipe/angle accounted for most crashes  "
+    "3. Rear-end and sideswipe/angle accounted for most crashes  "
    ]
   }
  ],
