--- a/notebooks/3_Bivariate_EDA.ipynb
+++ b/notebooks/3_Bivariate_EDA.ipynb
@@ -290,11 +290,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "18",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### 4.3.2 Numerical roadway factors"
    ]
@@ -465,11 +463,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assuming duidf already saved or can be recreated similarly\n",
-    "# If stored separately:\n",
-    "\n",
-    "full_df = pd.read_pickle(\"../data/cleaned/crash_2018_full.pkl\")\n",
-    "dui_df = full_df[full_df[\"BAC Available\"]].copy()\n",
+    "dui_df = cleaned_df[cleaned_df[\"BAC Available\"]].copy()\n",
     "\n",
     "print(\"Crash severity (%) by BAC category (DUI subset only)\\n\")\n",
     "\n",
