Modified Univariate boxplots and added interpretation for categorical

--- a/notebooks/2_Univariate_EDA.ipynb
+++ b/notebooks/2_Univariate_EDA.ipynb
@@ -111,9 +111,9 @@
     "\n",
     "3. The impact speed is right skewed indicating most of the crashes occured with impact speed ranging from 5mph to 45mph\n",
     "\n",
-    "4. The distribution for driver age shows that most crashes occured among young adults(20-50 years)\n",
+    "4. The distribution for driver age shows that young drivers (age around 20 years) are mostly involved in crashes.\n",
     "\n",
-    "5. Driver Blood Alcohol Concentration(BAC) tested after crash was most concentrated between 0.1% and 0.2%. Most divers were someway intoxicated. The typical legal limit is 0.08%  "
+    "5. For the suspected DUI cases, driver Blood Alcohol Concentration(BAC) tested after crash was most concentrated between 0.1% and 0.2%. Most divers were someway intoxicated. The typical legal limit is 0.08%  "
    ]
   },
   {
@@ -177,12 +177,62 @@
    "id": "11",
    "metadata": {},
    "source": [
-    "**Interpretations**"
+    "Those plots look messy because there are too many points and very skewed ranges (like AADT). Let’s fix this using sampling method (we shall sample 2000 data for easy visualization) and we shall use log scale for AADT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in continuous_vars:\n",
+    "    plt.figure(figsize=(8, 5))\n",
+    "\n",
+    "    # drop NaNs first\n",
+    "    series = cleaned_df[col].dropna()\n",
+    "    n_sample = min(2000, len(series)) #Pick 2000 random non-nan rows (or all rows if the sample size is less than 2000)\n",
+    "\n",
+    "    sample = series.sample(n=n_sample, random_state=0)\n",
+    "\n",
+    "    sns.stripplot(\n",
+    "        x=sample,\n",
+    "        color=\"skyblue\",\n",
+    "        alpha=0.3,\n",
+    "        size=3,\n",
+    "        jitter=0.2,\n",
+    "    )\n",
+    "\n",
+    "    sns.boxplot(\n",
+    "        x=cleaned_df[col],\n",
+    "        width=0.3,\n",
+    "        showcaps=True,\n",
+    "        boxprops=dict(facecolor=\"none\", edgecolor=\"black\", linewidth=1.5),\n",
+    "        whiskerprops=dict(linewidth=1.5),\n",
+    "        capprops=dict(linewidth=1.5),\n",
+    "        medianprops=dict(color=\"red\", linewidth=2),\n",
+    "    )\n",
+    "\n",
+    "    if col == \"AADT\":\n",
+    "        plt.xscale(\"log\")\n",
+    "\n",
+    "    plt.title(f\"{col} — Distribution with Outliers\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
+   "metadata": {},
+   "source": [
+    "### **Interpretations**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14",
    "metadata": {},
    "source": [
     "## 2.2.2 Categorical Variables"
@@ -191,8 +241,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
-   "metadata": {},
+   "id": "15",
+   "metadata": {
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Categorical variables\n",
@@ -215,6 +269,7 @@
     "\n",
     "# Categorical variables distribution\n",
     "for col in categorical_vars:\n",
+    "    print(f\"\\n\\n--> Distribution of {col}\\n\")\n",
     "    plt.figure(\n",
     "        figsize=(10, 4),\n",
     "    )\n",
@@ -226,23 +281,56 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "    print(f\"Counts for {col}:\")\n",
-    "    print(cleaned_df[col].value_counts(), \"\\n\")"
+    "    #We will show count and % for better understanding and also missing values\n",
+    "    counts = cleaned_df[col].value_counts(dropna=False)\n",
+    "    perc = cleaned_df[col].value_counts(normalize=True, dropna=False) * 100\n",
+    "    summary = pd.DataFrame({\"Count\": counts, \"Percent\": perc.round(1)})\n",
+    "    \n",
+    "    print(f\"\\nCounts and percentages for {col}:\")\n",
+    "    print(summary, \"\\n\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "16",
    "metadata": {},
    "source": [
     "**Observations**\n",
     "\n",
-    "1. Most crashes in 2018 resulted in Property Damage Only(PDO), 126,719 counts and 878 counts for fatal\n",
+    "- Crash Severity: Most crashes are PDO (79%), with only 0.5% fatal and 3.3% serious.\n",
     "\n",
-    "2. Majority of crashes occured on weekdays\n",
+    "- Weekend: Crashes happen more on weekdays (78%) than weekends (22%).\n",
     "\n",
-    "3. Rear-end and sideswipe/angle accounted for most crashes  "
+    "- Time of Day: About 73% of crashes occur in daytime and 27% at nighttime.\n",
+    "\n",
+    "- County: Crashes are highly concentrated in a few counties, led by Jefferson (21.5%) and Mobile (10.1%).\n",
+    "\n",
+    "- Area Type: Urban areas account for about 77% of crashes; rural areas about 23%.\n",
+    "\n",
+    "- Functional Class Recode: Crashes are most common on Principal Arterials (27%) and Minor Arterials (18%); 15% have missing functional class.\n",
+    "\n",
+    "- Vehicle Type Recode: Passenger cars dominate (49%), with pickups (17%) and “Other” (22%) also substantial; motorcycles are under 1%.\n",
+    "\n",
+    "- Driver Gender Recode: About half of crashes involve male drivers (50%), 39% female, and 12% missing gender.\n",
+    "\n",
+    "- Driver License Validity: Most involved drivers have valid licenses (78%), but about 13% do not and 9% are missing.\n",
+    "\n",
+    "- BAC Available: BAC information is rarely available—only 1.2% of cases.\n",
+    "\n",
+    "- Crash Manner Recode: Rear-end (37%) and sideswipe/angle (36%) crashes dominate; head-on is only 4.5%.\n",
+    "\n",
+    "- Visibility Obstruction Recode: Visibility obstructions are coded in about 8% of crashes; most (88%) report no obstruction.\n",
+    "\n",
+    "- Lighting Conditions Recode: Most crashes occur in daylight (72%); dark or night‑related conditions together account for around one‑quarter."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
