Bivariate Analysis complete with interpretation

--- a/notebooks/2_Univariate_EDA.ipynb
+++ b/notebooks/2_Univariate_EDA.ipynb
@@ -192,7 +192,9 @@
     "\n",
     "    # drop NaNs first\n",
     "    series = cleaned_df[col].dropna()\n",
-    "    n_sample = min(2000, len(series)) #Pick 2000 random non-nan rows (or all rows if the sample size is less than 2000)\n",
+    "    n_sample = min(\n",
+    "        2000, len(series)\n",
+    "    )  # Pick 2000 random non-nan rows (or all rows if the sample size is less than 2000)\n",
     "\n",
     "    sample = series.sample(n=n_sample, random_state=0)\n",
     "\n",
@@ -219,7 +221,7 @@
     "\n",
     "    plt.title(f\"{col} — Distribution with Outliers\")\n",
     "    plt.tight_layout()\n",
-    "    plt.show()\n"
+    "    plt.show()"
    ]
   },
   {
@@ -281,11 +283,11 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "    #We will show count and % for better understanding and also missing values\n",
+    "    # We will show count and % for better understanding and also missing values\n",
     "    counts = cleaned_df[col].value_counts(dropna=False)\n",
     "    perc = cleaned_df[col].value_counts(normalize=True, dropna=False) * 100\n",
     "    summary = pd.DataFrame({\"Count\": counts, \"Percent\": perc.round(1)})\n",
-    "    \n",
+    "\n",
     "    print(f\"\\nCounts and percentages for {col}:\")\n",
     "    print(summary, \"\\n\")"
    ]
