--- a/notebooks/3_Bivariate_EDA.ipynb
+++ b/notebooks/3_Bivariate_EDA.ipynb
@@ -84,9 +84,10 @@
    "metadata": {},
    "source": [
     "### Observations\n",
-    "- The percentage of severe crashes is slightly higher on weekends, while PDO crashes have a higher percentage on weekdays.\n",
-    "- Nighttime crashes are much more likely to be severe than daytime crashes.\n",
-    "- Rural areas experience considerably higher injury and fatal crashes, while urban areas experience a higher share of PDO crashes."
+    "\n",
+    "- Severe crashes make up a slightly larger share of weekend crashes (Serious+Fatal ≈ 5.1%) than weekday crashes (≈ 3.5%), while PDO is a bit more common on weekdays.\n",
+    "- At nighttime, the share of Serious+Fatal crashes (≈ 5.6%) is almost double that in daytime (≈ 3.3%), indicating much higher severity risk after dark.\n",
+    "- In rural areas, Serious+Fatal crashes (≈ 9.3%) are over three times as common proportionally as in urban areas (≈ 2.3%), while urban areas have a higher PDO share."
    ]
   },
   {
@@ -359,7 +360,24 @@
    "id": "21",
    "metadata": {},
    "source": [
-    "### Observations"
+    "### Observations\n",
+    "- Functional class: Severity percentages are fairly similar across classes, but collectors show the highest share of Serious+Fatal crashes (≈6.8%), while interstates have the lowest (≈3.4%).\n",
+    "\n",
+    "- Curvature: Crashes on curved segments are much more severe; Serious+Fatal share jumps from about 3.3% (no curve) to 8.6% (curve).\n",
+    "\n",
+    "- Grade: Presence of grade also increases severity; Serious+Fatal crashes rise from ≈3.2% (no grade) to ≈6.3% (grade).\n",
+    "\n",
+    "- Raised median: Roads without a raised median have a somewhat higher Serious+Fatal share (≈4.7%) than roads with medians (≈3.5%).\n",
+    "\n",
+    "- AADT: More severe crashes tend to occur on lower‑AADT roads; median AADT drops from about 17,700 (PDO) to 7,000–8,000 (Serious/Fatal).\n",
+    "\n",
+    "- Number of lanes: Median lane count is similar (about 3) across all severities, suggesting little clear severity pattern by lanes.\n",
+    "\n",
+    "- Number of vehicles: Median number of vehicles is 2 for PDO, Minor, and Serious, but only 1 for Fatal, hinting that single‑vehicle crashes may be more often fatal.\n",
+    "\n",
+    "- Speed limit: Higher severity is associated with slightly higher speed limits; median limit increases from about 45 mph (PDO) to around 58 mph (Fatal).\n",
+    "\n",
+    "- Impact speed: Median impact speed rises clearly with severity (≈23 mph PDO → ≈38 mph Minor → ≈48 mph Serious → ≈58 mph Fatal), indicating strong association between higher impact speed and more severe outcomes."
    ]
   },
   {
@@ -463,17 +481,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 1. DUI subset\n",
     "dui_df = cleaned_df[cleaned_df[\"BAC Available\"]].copy()\n",
     "\n",
-    "print(\"Crash severity (%) by BAC category (DUI subset only)\\n\")\n",
+    "# 2. BAC bins (adjust cut points if needed)\n",
+    "bac_bins = [-0.001, 0.0001, 0.08, 0.15, 10]  # 0, up to 0.08, 0.08–0.15, >0.15\n",
+    "bac_labels = [\"0.000\", \"< 0.08\", \"0.08–0.15\", \"> 0.15\"]\n",
     "\n",
-    "ct_bac = pd.crosstab(dui_df[\"Crash Severity\"], dui_df[\"Driver BAC\"], normalize=\"columns\") * 100\n",
+    "dui_df[\"BAC Category\"] = pd.cut(dui_df[\"Driver BAC\"], bins=bac_bins, labels=bac_labels)\n",
+    "\n",
+    "# 3. Crosstab on BAC Category instead of raw BAC\n",
+    "ct_bac = pd.crosstab(dui_df[\"Crash Severity\"], dui_df[\"BAC Category\"], normalize=\"columns\") * 100\n",
     "\n",
     "display(ct_bac.round(1))\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(8, 4))\n",
+    "fig, ax = plt.subplots(figsize=(6, 4))\n",
     "ct_bac.T.plot(kind=\"bar\", stacked=True, ax=ax)\n",
-    "ax.set_title(\"Crash severity by BAC (DUI subset)\")\n",
+    "ax.set_title(\"Crash severity by BAC category (DUI subset)\")\n",
     "ax.set_xlabel(\"BAC category\")\n",
     "ax.set_ylabel(\"Crash share by severity (%)\")\n",
     "ax.legend(title=\"Crash severity\", bbox_to_anchor=(1.05, 1), loc=\"upper left\")\n",
@@ -486,13 +510,34 @@
    "id": "30",
    "metadata": {},
    "source": [
+    "### Observations\n",
+    "- Vehicle type: Motorcycle crashes are far more severe: only 25% are PDO, while about 49% are Minor/Serious and 5% are Fatal, much higher fatal share than other vehicle types.\n",
+    "\n",
+    "- Driver gender: Males show a slightly higher share of Serious+Fatal crashes (≈4.5%) than females (≈3.5%), but differences are modest.\n",
+    "\n",
+    "- License validity: Drivers without valid licenses have a higher Serious+Fatal share (≈5.2%) compared with licensed drivers (≈3.9%).\n",
+    "\n",
+    "- Crash manner: Head‑on and “Others” crashes are much more severe (Serious+Fatal ≈ 8–9%) than rear‑end or sideswipe/angle crashes (≈2–3%).\n",
+    "\n",
+    "- BAC available: When BAC is available (likely DUI‑related cases), the Fatal share jumps to 5.5% compared with 0.5% when BAC data is absent, indicating much higher severity in this subset.\n",
+    "\n",
+    "- Driver age: Median driver age is in the mid‑30s for PDO, Minor, and Serious crashes, and slightly higher (≈38.5) for Fatal crashes; age differences across severity levels are relatively small.\n",
+    "\n",
+    "- Within the DUI subset, crashes with non‑zero BAC levels especially very high BAC (>0.15) show a noticeably higher share of Serious and Fatal outcomes than the overall crash population, indicating that DUI crashes tend to be more severe."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31",
+   "metadata": {},
+   "source": [
     "# 4.5. Crash Severity across Environmental Conditions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,9 +562,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "33",
+   "metadata": {},
+   "source": [
+    "### Observations\n",
+    "- Visibility obstructions are associated with a slightly lower share of recorded Severe (Serious+Fatal) crashes than “No obstruction,” but the difference is small and may reflect reporting or exposure patterns rather than true safety.\n",
+    "\n",
+    "- Crashes in dark conditions have a much higher Severe share (Serious+Fatal ≈ 9.2%) than in daylight (≈ 3.5%), suggesting substantially greater severity risk at night.\n",
+    "\n",
+    "- Dusk/dawn and illuminated/night‑lighted conditions fall between dark and daylight, but still show higher Severe shares than daylight alone."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": []
